--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
+    "@hookform/resolvers": "^1.0.0",
     "@material-ui/core": "^4.3.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.3.0",
     "axios": "^0.19.0",
+    "moment": "^2.29.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-hook-form": "^6.10.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-select": "^3.1.0",
+    "styled-components": "^5.2.1",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
